    (regression from 1.92.3)
  - InputTextMultiline: fixed a crash when using ImGuiInputTextFlags_WordWrap and
    resizing the parent window while keeping the multi-line field active (which is
    most typically achieved when resizing programmatically or via a docking layout
    reacting to a platform window resize). (#3237, #9007) [@anton-kl, @ocornut]
- Nav:
  - Clipper: fixed an issue when using up/down from an item outside of
    visible bound and using the clipper. (#9079)
- Fonts:
  - Calling ImFontAtlas::Clear() mid-frame without re-adding a font will
    lead to a more explicit crash.
- Textures:
  - Fixed an issue preventing multi-contexts from using each others' fonts
    if context 2 runs after context 1's Render() function. (#9039)
- MultiSelect: added ImGuiMultiSelectFlags_NoSelectOnRightClick to disable default
  right-click processing, which selects item on mouse down and is designed for
  context-menus. (#8200, #9015)
- Groups: fixed an issue reporting IsItemEdited() signal after EndGroup() when
  triggered by some widgets e.g. Checkbox(), Selectable() and many others, which
  cleared ActiveId at the same time as editing. (#9028)
  Note that IsItemDeactivatedAfterEdit() was not affected, only IsItemEdited).
- Misc: standardized casing of keyboard mods in comments and demo, showing
  as e.g. "Ctrl" instead of "CTRL".
- Drag and Drop:
  - Added ImGuiDragDropFlags_AcceptDrawAsHovered to make accepting item render
    as hovered, which can allow using e.g. Button() as drop target. (#8632)
  - Style: added ImGuiCol_DragDropTargetBg, style.DragDropTargetRounding,
    style.DragDropTargetBorderSize and style.DragDropTargetPadding to configure
    the drop target highlight. (#9056) [@aaronkirkham]
- Demo: About Box: emit infos to convey when IM_ASSERT() macro is disabled,
  - so users don't miss out on programming errors being reported.
  - so it is included in config/build info submitted in new GitHub Issues.
- Debug Tools: